--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
     <groupId>com.pluralsight</groupId>
     <artifactId>MutationTesting</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    
+
     <properties>
         <maven.compiler.source>10</maven.compiler.source>
         <maven.compiler.target>10</maven.compiler.target>
     </properties>
-  
+
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -57,7 +57,7 @@
                 </dependencies>
                 <configuration>
                     <targetClasses>
-                        <param>com.wiredbraincoffee.reward.*</param>
+                        <param>com.vodqa.thoughtworks.reward.*</param>
                     </targetClasses>
                 </configuration>
              </plugin>
