--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.pluralsight</groupId>
     <artifactId>MutationTesting</artifactId>
@@ -59,8 +60,32 @@
                     <targetClasses>
                         <param>com.vodqa.thoughtworks.reward.*</param>
                     </targetClasses>
+                    <reportsDirectory>
+                        ${project.build.directory}/pit-reports
+                    </reportsDirectory>
+                    <outputFormats>
+                        <value>XML</value>
+                        <value>HTML</value>
+                        <value>CSV</value>
+                    </outputFormats>
+                    <timestampedReports>true</timestampedReports>
+                    <excludedClasses>com.vodqa.thoughtworks.product.*</excludedClasses>
+                    <threads>4</threads>
+                    <targetTests>
+                        <param>com.vodqa.thoughtworks.reward.test.*</param>
+                    </targetTests>
+
+                    <mutators>
+                        <mutator>INCREMENTS</mutator>
+                        <mutator>MATH</mutator>
+                        <mutator>NEGATE_CONDITIONALS</mutator>
+                        <mutator>INVERT_NEGS</mutator>
+                        <mutator>CONDITIONALS_BOUNDARY</mutator>
+                    </mutators>
+
                 </configuration>
-             </plugin>
+
+            </plugin>
         </plugins>
     </build>
 </project>
